syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hpcclab.oaas.invoker.proto";
option java_outer_classname = "OprcProto";

package oprc;

message InvocationRequest {
  string main = 1;
  string cls = 2;
  string fb = 3;
  map<string, string> args = 4;
  repeated string inputs = 5;
  bool immutable = 6;
  bool macro = 7;
  bool inMacro = 8;
  string invId = 9;
  string outId = 10;
  map<string, string> macroIds = 11;
  bool preloadingNode = 12;
  int64 queTs = 13;
  bytes body = 14;
}

message InvocationResponse {

}

message OObject {

}


message OOState {

}
